--- a/app/src/main/res/layout/full_screen.xml
+++ b/app/src/main/res/layout/full_screen.xml
@@ -20,6 +20,15 @@
             android:id="@+id/control"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/play"
+                android:onClick="changeScaleType"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_video_label_black_24dp"
+                />
             <ImageView
                 android:id="@+id/play"
                 android:layout_width="wrap_content"
